--- a/templates/fileform.html
+++ b/templates/fileform.html
@@ -1,11 +1,154 @@
-<html>
-    <head>
-        <title>Simple file upload using Python Flask</title>
-    </head>
-    <body>
-        <form action="/handleUpload" method="post" enctype="multipart/form-data">
-            Choose the file: <input type="file" name="photo"/><BR>
-                <input type="submit" value="Upload"/>
-        </form> 
-    </body>
+<!doctype html>
+<html lang="en">
+
+<head>
+
+    <!--====== Required meta tags ======-->
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!--====== Title ======-->
+    <title>PictonWeb (WIP)</title>
+
+    <!--====== Favicon Icon ======-->
+    <link rel="shortcut icon" href="../static/assets/images/favicon.png" type="image/png">
+
+    <!--====== Bootstrap css ======-->
+    <link rel="stylesheet" href="../static/assets/css/bootstrap.min.css">
+
+    <!--====== Line Icons css ======-->
+    <link rel="stylesheet" href="../static/../static/assets/css/LineIcons.css">
+    <link rel="stylesheet" href="../static/../static/assets/css/input.css">
+    <!--====== Magnific Popup css ======-->
+    <link rel="stylesheet" href="../static/../static/assets/css/magnific-popup.css">
+
+    <!--====== Default css ======-->
+    <link rel="stylesheet" href="../static/../static/assets/css/default.css">
+
+    <!--====== Style css ======-->
+    <link rel="stylesheet" href="../static/assets/css/style.css">
+
+
+</head>
+
+<body>
+
+    <!--====== HEADER PART START ======-->
+
+    <header class="header-area">
+        <div class="navgition navgition-transparent">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <nav class="navbar navbar-expand-lg">
+                            <a class="navbar-brand" href="#">
+                                <img src="../static/assets/images/logo.svg" alt="Logo">
+                            </a>
+
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarOne" aria-controls="navbarOne" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="toggler-icon"></span>
+                                <span class="toggler-icon"></span>
+                                <span class="toggler-icon"></span>
+                            </button>
+
+                            <div class="collapse navbar-collapse sub-menu-bar" id="navbarOne">
+                                <ul class="navbar-nav m-auto">
+                                    <li class="nav-item">
+                                        <p class="page-scroll" href="#home"></p>
+                                    </li>
+                                    <li class="nav-item">
+                                        <p class="page-scroll" href="#service"></p>
+                                    </li>
+                                    <li class="nav-item">
+                                        <p class="page-scroll" href="#pricing"></p>
+                                    </li>
+                                    <li class="nav-item">
+                                        <p class="page-scroll" href="#contact"></p>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="navbar-social d-none d-sm-flex align-items-center">
+                                <span>FOLLOW US</span>
+                                <ul>
+                                    <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
+                                    <li><a href="#"><i class="lni-twitter-original"></i></a></li>
+                                    <li><a href="#"><i class="lni-instagram-original"></i></a></li>
+                                    <li><a href="#"><i class="lni-linkedin-original"></i></a></li>                                  
+                                </ul>
+                            </div>
+                        </nav> <!-- navbar -->
+                    </div>
+                </div> <!-- row -->
+            </div> <!-- container -->
+        </div> <!-- navgition -->
+
+        <div id="home" class="header-hero bg_cover" style="background-image: url(../static/assets/images/header-bg.jpg)">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-xl-8 col-lg-10">
+                        <div class="header-content text-center">
+                            <h3 class="header-title">Picton - Work in progress</h3>
+                            <p class="text">Upload your bird picture and the AI will tell you what bird it is!</p>
+                            <ul class="header-btn">
+                                <form action="/handleUpload" method="post" enctype="multipart/form-data">
+                                    <div class="wrap-custom-file">
+                                        <input type="file" name="photo" id="image1" accept=".jpg" />
+                                        <label  for="image1">
+                                          <span>Select Image</span>
+                                          <i class="fa fa-plus-circle"></i>
+                                        </label>
+                                      </div><br>
+                                      <input type="submit" value="Upload"/>
+                                </form> 
+                                </ul>
+                        </div> <!-- header content -->
+                    </div>
+                </div> <!-- row -->
+            </div> <!-- container -->
+            <div class="header-shape">
+                <img src="../static/assets/images/header-shape.svg" alt="shape">
+            </div>
+        </div> <!-- header content -->
+    </header>
+
+    <!--====== HEADER PART ENDS ======-->
+
+   
+
+
+    
+   
+    
+
+
+
+
+
+
+
+
+
+    <!--====== jquery js ======-->
+    <script src="../static/assets/js/vendor/modernizr-3.6.0.min.js"></script>
+    <script src="../static/assets/js/vendor/jquery-1.12.4.min.js"></script>
+
+    <!--====== Bootstrap js ======-->
+    <script src="../static/assets/js/bootstrap.min.js"></script>
+    <script src="../static/assets/js/popper.min.js"></script>
+
+    <!--====== Scrolling Nav js ======-->
+    <script src="../static/assets/js/jquery.easing.min.js"></script>
+    <script src="../static/assets/js/scrolling-nav.js"></script>
+
+    <!--====== Magnific Popup js ======-->
+    <script src="../static/assets/js/jquery.magnific-popup.min.js"></script>
+
+    <!--====== Main js ======-->
+    <script src="../static/assets/js/main.js"></script>
+    <script src="../static/assets/js/input.js"></script>
+</body>
+
 </html>
