--- a/templates/fileform.html
+++ b/templates/fileform.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--====== Title ======-->
-    <title>PictonWeb (WIP)</title>
+    <title>PictonWeb</title>
 
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="../static/assets/images/favicon.png" type="image/png">
@@ -94,8 +94,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-8 col-lg-10">
                         <div class="header-content text-center">
-                            <h3 class="header-title">Picton - Work in progress</h3>
-                            <p class="text">Upload your bird picture and the AI will tell you what bird it is!</p>
+                            <h3 class="header-title">Picton - A birdwatcher</h3>
+                            <p class="text">Upload your bird picture and the AI will tell you what bird it is! <br> Currently this AI is familiar with the following types of bird: seagull, penguin, owl, pigeon, kiwi bird, blackbird, eagle and mallard</p>
                             <ul class="header-btn">
                                 <form action="/handleUpload" method="post" enctype="multipart/form-data">
                                     <div class="wrap-custom-file">
